:hammer: chore: generalise dispatch for GB

--- a/packages/client/locales/en_gb/common.json
+++ b/packages/client/locales/en_gb/common.json
@@ -49,7 +49,7 @@
     "business": "Business",
     "truckLogs": "Truck Logs",
     "admin": "Admin",
-    "dispatch": "Metropolitan Control",
+    "dispatch": "Control",
     "liveMap": "Live Map",
     "officer": "Police",
     "dashboard": "Dashboard",
