- Fix small mistakes - Add new entries to language files

--- a/packages/client/locales/ru/business.json
+++ b/packages/client/locales/ru/business.json
@@ -3,7 +3,7 @@
     "businesses": "Компании",
     "owned": "Владею",
     "joined": "Работаю",
-    "noOwned": "Вы не владеете коспаниями",
+    "noOwned": "Вы не владеете компаниями",
     "role": "Роль",
     "citizen": "Гражданин",
     "notEmployee": "Вы не работаете в компаниях",
@@ -13,7 +13,7 @@
     "owner": "Владелец",
     "name": "Название",
     "address": "Адрес",
-    "whitelisted": "Со списклм доступа",
+    "whitelisted": "Со списком доступа",
     "deletePost": "Удалить пост",
     "createPost": "Создать пост",
     "editPost": "Редактировать пост",
@@ -21,7 +21,7 @@
     "employeeOfTheMonth": "Сотрудник месяца",
     "publishedBy": "Опубликовано",
     "fire": "Уволить",
-    "manageEmployee": "Управлять сотруднками",
+    "manageEmployee": "Управлять сотрудниками",
     "canManageEmployees": "Может управлять сотрудниками",
     "canCreatePosts": "Может создавать посты",
     "fireEmployee": "Уволить сотрудника",
