--- a/packages/client/locales/ru/calls.json
+++ b/packages/client/locales/ru/calls.json
@@ -1,7 +1,7 @@
 {
   "Calls": {
     "tow": "Эвакуация",
-    "towLogs": "Журанл эвакуации",
+    "towLogs": "Журнал эвакуации",
     "taxi": "Такси",
     "active911Calls": "Активные вызовы 911",
     "noTowCalls": "Нет вызовов эвакуатора.",
@@ -15,6 +15,7 @@
     "createTowCall": "Вызвать эвакуатор",
     "createTaxiCall": "Вызвать такси",
     "create911Call": "Вызвать 911",
+    "manage911Call": "Управлять вызовом 911",
     "editTowCall": "Редактировать вызов эвакуатора",
     "editTaxiCall": "Редактировать вызов такси",
     "assignedUnits": "Прикрепленные юниты",
