--- a/packages/client/locales/ru/common.json
+++ b/packages/client/locales/ru/common.json
@@ -60,7 +60,7 @@
     "manageUnits": "Управление юнитами",
     "jail": "Тюрьма",
     "tow": "Эвакуатор",
-    "towLogs": "Журнал эвакуатора",
+    "towLogs": "Журнал эвакуации",
     "emsFd": "EMS/FD",
     "myDeputies": "Сотрудники",
     "account": "Аккаунт",
