--- a/packages/client/locales/ru/leo.json
+++ b/packages/client/locales/ru/leo.json
@@ -131,7 +131,15 @@
     "noSeizedItems": "Нет изъятых предметов.",
     "editSeizedItem": "Редактировать изъятые предметы",
     "addSeizedItem": "Добавить изъятые предметы",
-    "seizedItems": "Изъяты предметы",
+    "seizedItems": "Изъятые предметы",
+    "callsignPreview": "Callsign preview",
+    "activeIncidents": "Активные инциденты",
+    "noActiveIncidents": "Нет активных инцидентов",
+    "incident": "Инцидент",
+    "endIncident": "Завершить инцидент",
+    "end": "Окончание",
+    "manageIncident": "Управлять инцидентами",
+    "alert_endIncident": "Вы уверены, что хотите завершить инцидент? Он будет доступен офицерам.",
     "alert_deleteRecord": "Вы уверены, что хотите удалить эту запись? Это действие необратимо.",
     "alert_deleteOfficer": "Вы уверены, что хотите удалить <span>{officer}</span>? Это действие необратимо.",
     "alert_allowCheckout": "Вы уверены, что хотите разрешить выезд этому транспорту со штрафстоянки?",
