:hammer: chore: add missing translations closes #458 closes #459 closes #460 closes #457 closes #455

--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -39,7 +39,11 @@
     "imgur": "Imgur URL",
     "postal": "Postal",
     "viewDescription": "View description",
-    "citizen": "Citizen"
+    "citizen": "Citizen",
+    "cropImage": "Crop Image",
+    "crop": "Crop",
+    "hide": "Hide",
+    "show": "Show"
   },
   "Nav": {
     "citizen": "Citizen",
