--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -139,6 +139,8 @@
     "endIncident": "End Incident",
     "end": "End",
     "manageIncident": "Manage Incident",
+    "radioChannel": "Radio Channel",
+    "manageRadioChannel": "Manage Radio Channel",
     "alert_endIncident": "Are you sure you want to end this incident. It can still be viewed by officers.",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone.",
