- Error correction - Adding new entries

--- a/packages/client/locales/ru/admin.json
+++ b/packages/client/locales/ru/admin.json
@@ -3,7 +3,7 @@
     "management": "Управление",
     "adminDashboard": "Панель администратора",
     "MANAGE_CITIZENS": "Управление гражданами",
-    "MANAGE_BUSINESSES": "Управление бизнесом",
+    "MANAGE_BUSINESSES": "Управление компаниями",
     "MANAGE_USERS": "Управление пользователями",
     "MANAGE_UNITS": "Управление юнитами",
     "MANAGE_EXPUNGEMENT_REQUESTS": "Запросы на удаление",
@@ -16,7 +16,7 @@
     "pendingUsers": "Ожидающие пользователи",
     "viewInfo": "Просмотр информации",
     "noCitizens": "В CAD ещё нет граждан",
-    "noBusinesses": "В CAD ещё нет ни одного бизнеса",
+    "noBusinesses": "В CAD ещё нет ни одной компании",
     "user": "Пользователь",
     "owner": "Владелец",
     "GENERAL_SETTINGS": "Основные настройки",
@@ -33,7 +33,7 @@
     "whitelisted": "Подтвержден",
     "declineOfficer": "Отклонить ",
     "action": "Действие",
-    "noPendingOfficers": "Нет офтцеров, ожидающих доступа в департамент",
+    "noPendingOfficers": "Нет офицеров, ожидающих доступа в департамент",
     "allUnits": "Все юниты",
     "departmentWhitelisting": "Список доступа департамента ({length})",
     "importViaFile": "Импорт из файла",
