--- a/packages/client/locales/ru/auth.json
+++ b/packages/client/locales/ru/auth.json
@@ -13,9 +13,9 @@
     "registrationCode": "Код регистрации",
     "changePassword": "Изменить пароль",
     "totpCode": "2FA код",
-    "twoFactorCode": "Код двухфакторной авторизации",
+    "twoFactorCode": "Код двухфакторной аутентификации",
     "savePasswordInfo": "Убедитесь, что надежно сохранили новый пароль, чтобы этого больше не повторилось!",
     "loginViaDiscord": "Войти через Discord",
-    "continueAs": "Продалжить, как {username}"
+    "continueAs": "Продолжить, как {username}"
   }
 }
