--- a/packages/client/locales/ru/bleeter.json
+++ b/packages/client/locales/ru/bleeter.json
@@ -5,7 +5,7 @@
     "createBleet": "Создать пост",
     "editBleet": "Редактировать пост",
     "deleteBleet": "Удалить пост",
-    "viewBleet": "Просмостреть пост",
+    "viewBleet": "Просмотреть пост",
     "headerImage": "Изображение заголовка",
     "bleetTitle": "Название поста",
     "bleetBody": "Текст поста",
