--- a/packages/client/locales/ru/common.json
+++ b/packages/client/locales/ru/common.json
@@ -39,7 +39,11 @@
     "imgur": "Ссылка на imgur",
     "postal": "Почтовый код",
     "viewDescription": "Просмотр описания",
-    "citizen": "Гражданин"
+    "citizen": "Гражданин",
+    "cropImage": "Обрезать изображение",
+    "crop": "Обрезка",
+    "hide": "Скрыть",
+    "show": "Показать"
   },
   "Nav": {
     "citizen": "Гражданин",
@@ -73,18 +77,18 @@
   },
   "Errors": {
     "unknown": "Произошла непредвиденная ошибка",
-    "userNotFound": "Пользоатель не найден.",
-    "nameAlreadyTaken": "Гражданин с таким полным именем существует.",
+    "userNotFound": "Пользователь не найден.",
+    "nameAlreadyTaken": "Гражданин с таким полным именем уже существует.",
     "whitelistPending": "Пользователь ожидает подтверждения для доступа к CAD.",
     "whitelistDeclined": "Доступ к CAD отклонен.",
     "passwordIncorrect": "Введенный пароль неверен.",
-    "userAlreadyExists": "Пользователь с таким именем существует.",
+    "userAlreadyExists": "Пользователь с таким именем уже существует.",
     "notFound": "Запись не найдена.",
     "plateAlreadyInUse": "Номерной знак уже используется.",
-    "invalidImageType": "Поддерживают только типы image/png, image/jpeg, image/jpg и image/jpg",
+    "invalidImageType": "Поддерживаются только типы image/png, image/jpeg, image/jpg и image/gif",
     "userBanned": "Пользователь забанен в CAD.",
-    "userDeleted": "Пользователь удален в CAD.",
-    "alreadyInThisBusiness": "Вы уже работатет в этой компании.",
+    "userDeleted": "Пользователь удален из CAD.",
+    "alreadyInThisBusiness": "Вы уже работаете в этой компании.",
     "insufficientPermissions": "Недостаточно прав",
     "maxBusinessesLength": "Вы достигли максимального количества компаний для гражданина.",
     "dateLargerThanNow": "Пожалуйста, укажите дату меньше, чем сегодняшняя.",
@@ -93,7 +97,7 @@
     "currentPasswordIncorrect": "Неверный пароль",
     "citizenNotFound": "Гражданин не найден",
     "selectImageFirst": "Сначала выберите изображение.",
-    "officerIsCombined": "Этот офицер используется в парном юните и не может быть использовать отдельно сейчас.",
+    "officerIsCombined": "Этот офицер используется в парном юните и не может быть использован отдельно сейчас.",
     "officerAlreadyMerged": "Юнит уже отмечен, как парный.",
     "discordNameInUse": "Нельзя создать нового пользователя с таким Discord, поскольку имя уже используется.",
     "discordAccountAlreadyLinked": "Этот Discord аккаунт уже привязан к другому пользователю.",
