--- a/packages/client/locales/ru/leo.json
+++ b/packages/client/locales/ru/leo.json
@@ -25,14 +25,14 @@
     "createTicket": "Создать штраф",
     "createArrestReport": "Создать отчёт об аресте",
     "createWrittenWarning": "Создать письменное предупреждение",
-    "createBolo": "Создать Bolo",
+    "createBolo": "Создать BOLO",
     "nameSearch": "Поиск по имени",
     "addressSearch": "Поиск по адресу",
     "notepad": "Блокнот",
     "plateSearch": "Поиск по номерному знаку",
     "weaponSearch": "Поиск оружия",
     "activeOfficer": "Активный офицер",
-    "activeOfficers": "Активный офицеры",
+    "activeOfficers": "Активные офицеры",
     "updateAOP": "Обновить игровую зону (AOP)",
     "utilityPanel": "Панель управления",
     "noActiveOfficers": "Нет активных офицеров",
@@ -99,7 +99,7 @@
     "timeOut": "Время освобождения",
     "jail": "Тюрьма",
     "release": "Освободить",
-    "noImprisonedCitizens": "Нет орестованных граждан.",
+    "noImprisonedCitizens": "Нет арестованных граждан.",
     "bailPostedBy": "Залог внес",
     "noPenalCodesSelected": "Статьи не выбраны.",
     "penalCode": "Уголовный кодекс",
@@ -132,13 +132,16 @@
     "editSeizedItem": "Редактировать изъятые предметы",
     "addSeizedItem": "Добавить изъятые предметы",
     "seizedItems": "Изъятые предметы",
-    "callsignPreview": "Callsign preview",
+    "callsignPreview": "Предпросмотр позывного",
     "activeIncidents": "Активные инциденты",
     "noActiveIncidents": "Нет активных инцидентов",
     "incident": "Инцидент",
     "endIncident": "Завершить инцидент",
     "end": "Окончание",
     "manageIncident": "Управлять инцидентами",
+    "radioChannel": "Радиоканал",
+    "manageRadioChannel": "Управлять радиоканалом",
+    "noIncidentEvents": "В инциденте нет событий.",
     "alert_endIncident": "Вы уверены, что хотите завершить инцидент? Он будет доступен офицерам.",
     "alert_deleteRecord": "Вы уверены, что хотите удалить эту запись? Это действие необратимо.",
     "alert_deleteOfficer": "Вы уверены, что хотите удалить <span>{officer}</span>? Это действие необратимо.",
