--- a/packages/client/locales/ru/truck-logs.json
+++ b/packages/client/locales/ru/truck-logs.json
@@ -6,8 +6,8 @@
     "deleteTruckLog": "Удалить запись о грузоперевозке",
     "driver": "Водитель",
     "vehicle": "Транспорт",
-    "startedAt": "Начало",
-    "endedAt": "Окончание",
+    "startedAt": "Погрузка",
+    "endedAt": "Выгрузка",
     "noTruckLogs": "У вас нет журналов грузоперевозок.",
     "alert_deleteTruckLog": "Вы уверены, что хотите удалить запись о грузоперевозке? Это действие необратимо."
   }
