--- a/packages/client/locales/ru/values.json
+++ b/packages/client/locales/ru/values.json
@@ -2,7 +2,7 @@
   "Values": {
     "totalItems": "Всего записей",
     "values": "Значения",
-    "shouldDo": "Должен сделать",
+    "shouldDo": "Выполнить действие",
     "color": "Цвет",
     "callsign": "Позывной",
     "department": "Департамент",
@@ -20,7 +20,7 @@
     "deleteSelectedValues": "Удалить выбранные значения",
     "alert_deletePenalCodeGroup": "Вы уверены, что хотите удалить <span>{group}</span>? Это действие необратимо!",
     "alert_deleteValue": "Вы уверены, что хотите удалить <span>{value}</span>? Это действие необратимо!",
-    "alert_deleteSelectedValues": "Вы уверены, что хотите удалить {length} items? Это действие необратимо!"
+    "alert_deleteSelectedValues": "Вы уверены, что хотите удалить {length} запись(-ей)? Это действие необратимо!"
   },
   "GENDER": {
     "MANAGE": "Пол человека",
