:tada: feat: only show statuses for activeUnit

--- a/packages/client/locales/en/values.json
+++ b/packages/client/locales/en/values.json
@@ -16,6 +16,7 @@
     "licenseType": "License Type",
     "whitelisted": "Whitelisted",
     "whatPages": "What Pages",
+    "departments": "Departments",
     "isDefaultDepartment": "Default Department",
     "deleteSelectedValues": "Delete Selected Values",
     "alert_deletePenalCodeGroup": "Are you sure you want to delete <span>{group}</span>? This action cannot be undone.",
