--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -143,6 +143,7 @@
     "manageRadioChannel": "Manage Radio Channel",
     "noIncidentEvents": "This incident does not have any events.",
     "viewCall": "View Call",
+    "situationCode": "Situation Code",
     "alert_endIncident": "Are you sure you want to end this incident. It can still be viewed by officers.",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone.",
