:tada: feat: unit filters

--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -43,7 +43,8 @@
     "cropImage": "Crop Image",
     "crop": "Crop",
     "hide": "Hide",
-    "show": "Show"
+    "show": "Show",
+    "filters": "Filters"
   },
   "Nav": {
     "citizen": "Citizen",
