:tada: feat: contextual links

--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -44,7 +44,8 @@
     "crop": "Crop",
     "hide": "Hide",
     "show": "Show",
-    "filters": "Filters"
+    "filters": "Filters",
+    "openInSearch": "Open in search"
   },
   "Nav": {
     "citizen": "Citizen",
