--- a/packages/client/locales/en/values.json
+++ b/packages/client/locales/en/values.json
@@ -107,5 +107,11 @@
     "ADD": "Add Impound Lot",
     "DELETE": "Delete Impound Lot",
     "EDIT": "Edit Impound Lot"
+  },
+  "VEHICLE_FLAG": {
+    "MANAGE": "Manage Vehicle flags",
+    "ADD": "Add vehicle flag",
+    "DELETE": "Delete vehicle flag",
+    "EDIT": "Edit vehicle flag"
   }
 }
