--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -145,6 +145,7 @@
     "viewCall": "View Call",
     "situationCode": "Situation Code",
     "mergeOfficers": "Merge officers",
+    "manageVehicleFlags": "Manage vehicle flags",
     "alert_endIncident": "Are you sure you want to end this incident. It can still be viewed by officers.",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone.",
