--- a/packages/client/locales/en/citizen.json
+++ b/packages/client/locales/en/citizen.json
@@ -55,6 +55,12 @@
     "reportAsStolen": "Report as stolen",
     "registeredVehicles": "Registered Vehicles",
     "flags": "Flags",
+    "inspectionStatus": "Inspection Status",
+    "taxStatus": "Tax Status",
+    "taxed": "Taxed",
+    "untaxed": "Untaxed",
+    "passed": "Passed",
+    "failed": "Failed",
     "alert_deleteVehicle": "Are you sure you want to delete this vehicle? This action cannot be undone."
   },
   "Weapons": {
