--- a/packages/client/locales/en_gb/admin.json
+++ b/packages/client/locales/en_gb/admin.json
@@ -6,7 +6,8 @@
     "MANAGE_BUSINESSES": "Manage Businesses",
     "MANAGE_USERS": "Manage Users",
     "MANAGE_UNITS": "Manage Units",
-    "MANAGE_EXPUNGEMENT_REQUESTS": "Manage Expungement Requests",
+    "MANAGE_EXPUNGEMENT_REQUESTS": "Manage Sealing Requests",
+    "MANAGE_NAME_CHANGE_REQUESTS": "Manage Deed Poll Requests",
     "MANAGE_CAD_SETTINGS": "CAD Settings",
     "import": "Import",
     "IMPORT_CITIZENS": "Import Civilians",
