--- a/packages/client/locales/en_gb/citizen.json
+++ b/packages/client/locales/en_gb/citizen.json
@@ -29,6 +29,8 @@
     "phoneNumber": "Phone Number",
     "pilotLicense": "Pilot License",
     "pilotLicenseCategory": "Pilot License Categories",
+    "waterLicense": "Boating License",
+    "waterLicenseCategory": "Boating License Categories",
     "ccw": "CCW",
     "createTaxiCall": "Create Taxi Call",
     "create911Call": "Create 999 Call",
@@ -54,6 +56,13 @@
     "deleteVehicle": "Delete Vehicle",
     "reportAsStolen": "Report as stolen",
     "registeredVehicles": "Registered Vehicles",
+    "flags": "Flags",
+    "inspectionStatus": "MOT Status",
+    "taxStatus": "Tax Status",
+    "taxed": "Taxed",
+    "untaxed": "Untaxed",
+    "passed": "Passed",
+    "failed": "Failed",
     "alert_deleteVehicle": "Are you sure you want to delete this vehicle? This action cannot be undone."
   },
   "Weapons": {
