--- a/packages/client/locales/en_gb/leo.json
+++ b/packages/client/locales/en_gb/leo.json
@@ -25,7 +25,7 @@
     "createTicket": "Create FPN",
     "createArrestReport": "Create Arrest Report",
     "createWrittenWarning": "Create Caution",
-    "createBolo": "Create Tag",
+    "createBolo": "Create Remark",
     "nameSearch": "Name Search",
     "addressSearch": "Address Search",
     "notepad": "Notepad",
@@ -97,7 +97,7 @@
     "jailTime": "Prison Term",
     "arrested": "Arrested",
     "timeOut": "Spent Conviction",
-    "jail": "Prison",
+    "jail": "Custody",
     "release": "Release",
     "noImprisonedCitizens": "There are no civilians arrested.",
     "bailPostedBy": "Bail Posted by",
@@ -138,6 +138,14 @@
     "incident": "Incident",
     "endIncident": "End Incident",
     "end": "End",
+    "manageIncident": "Manage Incident",
+    "radioChannel": "Channel",
+    "manageRadioChannel": "Manage Channel",
+    "noIncidentEvents": "This incident does not have any events.",
+    "viewCall": "View Call",
+    "situationCode": "Response Code",
+    "mergeOfficers": "Merge officers",
+    "manageVehicleFlags": "Manage vehicle flags",
     "alert_endIncident": "Are you sure you want to end this incident. It can still be viewed by officers.",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone.",
@@ -146,13 +154,13 @@
     "alert_revokeWarrant": "Are you sure you want to revoke this warrant? This action cannot be undone."
   },
   "Bolos": {
-    "activeBolos": "Active Tags",
-    "noActiveBolos": "There are no active tags",
-    "deleteBolo": "Delete Tag",
-    "editBolo": "Edit Tag",
-    "createBolo": "Create Tag",
-    "typeBolos": "{type} tags",
-    "noActiveBolosForType": "No active tags for type: {type}",
-    "alert_deleteBolo": "Are you sure you want to delete this tag? This action cannot be undone"
+    "activeBolos": "Active Remarks",
+    "noActiveBolos": "There are no active remarks",
+    "deleteBolo": "Delete Remark",
+    "editBolo": "Edit Remark",
+    "createBolo": "Create Remark",
+    "typeBolos": "{type} remarks",
+    "noActiveBolosForType": "No active remarks for type: {type}",
+    "alert_deleteBolo": "Are you sure you want to delete this remark? This action cannot be undone"
   }
 }
