--- a/packages/client/locales/en_gb/values.json
+++ b/packages/client/locales/en_gb/values.json
@@ -16,8 +16,10 @@
     "licenseType": "License Type",
     "whitelisted": "Whitelisted",
     "whatPages": "What Pages",
+    "departments": "Forces",
     "isDefaultDepartment": "Default Department",
     "deleteSelectedValues": "Delete Selected Values",
+    "isDefault": "Is Default",
     "alert_deletePenalCodeGroup": "Are you sure you want to delete <span>{group}</span>? This action cannot be undone.",
     "alert_deleteValue": "Are you sure you want to delete <span>{value}</span>? This action cannot be undone!",
     "alert_deleteSelectedValues": "Are you sure you want to delete {length} items? This action cannot be undone"
@@ -105,5 +107,11 @@
     "ADD": "Add Pound",
     "DELETE": "Delete Pound",
     "EDIT": "Edit Pound"
+  },
+  "VEHICLE_FLAG": {
+    "MANAGE": "Manage Vehicle flags",
+    "ADD": "Add vehicle flag",
+    "DELETE": "Delete vehicle flag",
+    "EDIT": "Edit vehicle flag"
   }
 }
