--- a/packages/client/locales/en/values.json
+++ b/packages/client/locales/en/values.json
@@ -113,5 +113,11 @@
     "ADD": "Add vehicle flag",
     "DELETE": "Delete vehicle flag",
     "EDIT": "Edit vehicle flag"
+  },
+  "CITIZEN_FLAG": {
+    "MANAGE": "Manage Citizen flags",
+    "ADD": "Add citizen flag",
+    "DELETE": "Delete citizen flag",
+    "EDIT": "Edit citizen flag"
   }
 }
