--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -146,6 +146,7 @@
     "situationCode": "Situation Code",
     "mergeOfficers": "Merge officers",
     "manageVehicleFlags": "Manage vehicle flags",
+    "manageCitizenFlags": "Manage citizen flags",
     "alert_endIncident": "Are you sure you want to end this incident. It can still be viewed by officers.",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone.",
