--- a/packages/client/locales/en/admin.json
+++ b/packages/client/locales/en/admin.json
@@ -38,6 +38,7 @@
     "allUnits": "All Units",
     "departmentWhitelisting": "Department Whitelisting ({length})",
     "importViaFile": "Import via file",
+    "managePermissions": "Manage Permissions",
     "info_pendingBusinesses": "These are created businesses that are awaiting approval to be used. Accept or decline them.",
     "alert_deleteBusiness": "Are you sure you want to delete this <span>{name}</span>? All it's data will be lost. This action cannot be undone."
   }
