--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -121,6 +121,7 @@
     "maxDepartmentsReachedPerUser": "You've reached the max set of units with this department. Please choose a different department or try again later.",
     "allowRegularLoginIsDisabled": "Regular login is disabled. Please use Discord OAuth instead",
     "Invalid Permissions": "You don't have permissions to access this API Route.",
-    "alreadyPendingNameChange": "This citizen already has a pending name change request."
+    "alreadyPendingNameChange": "This citizen already has a pending name change request.",
+    "nameChangeRequestNotNew": "To create a name change request, the new name cannot match the previous name."
   }
 }
