--- a/packages/client/locales/en/calls.json
+++ b/packages/client/locales/en/calls.json
@@ -42,6 +42,9 @@
     "removeMarker": "Remove marker",
     "setMarker": "Set marker",
     "situationCode": "Situation Code",
+    "towCallCreated": "Successfully created the tow call.",
+    "taxiCallCreated": "Successfully created the taxi call.",
+    "911CallCreated": "Successfully created the 911 call.",
     "alert_purgeSelectedCalls": "Are you sure you want to purge {length} item(s)? This will delete {length} item(s) from the database. This action cannot be undone.",
     "alert_deleteCallEvent": "Are you sure you want to delete this event? This action cannot be undone.",
     "alert_end911Call": "Are you sure you want to end this call?",
