--- a/packages/client/locales/en/citizen.json
+++ b/packages/client/locales/en/citizen.json
@@ -63,6 +63,7 @@
     "untaxed": "Untaxed",
     "passed": "Passed",
     "failed": "Failed",
+    "successVehicleRegistered": "Successfully registered a vehicle with plate: {plate}",
     "alert_deleteVehicle": "Are you sure you want to delete this vehicle? This action cannot be undone."
   },
   "Weapons": {
@@ -74,6 +75,7 @@
     "noWeapons": "You do not have any weapons registered yet.",
     "deleteWeapon": "Delete Weapon",
     "registeredWeapons": "Registered Weapons",
+    "successWeaponRegistered": "Successfully registered a weapon",
     "alert_deleteWeapon": "Are you sure you want to delete this weapon? This action cannot be undone."
   },
   "MedicalRecords": {
