--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -147,6 +147,10 @@
     "mergeOfficers": "Merge officers",
     "manageVehicleFlags": "Manage vehicle flags",
     "manageCitizenFlags": "Manage citizen flags",
+    "successCreateWarrant": "Successfully created a warrant for {citizen}",
+    "successCreateTicket": "Successfully created a ticket for {citizen}",
+    "successCreateArrestReport": "Successfully created an arrest report for {citizen}",
+    "successCreateWarning": "Successfully created a written warning for {citizen}",
     "alert_endIncident": "Are you sure you want to end this incident. It can still be viewed by officers.",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone.",
