:tada: feat: Firearm license category

--- a/packages/client/locales/en/citizen.json
+++ b/packages/client/locales/en/citizen.json
@@ -31,6 +31,7 @@
     "pilotLicenseCategory": "Pilot License Categories",
     "waterLicense": "Water License",
     "waterLicenseCategory": "Water License Categories",
+    "firearmLicenseCategory": "Firearm License Categories",
     "ccw": "CCW",
     "createTaxiCall": "Create Taxi Call",
     "create911Call": "Create 911 Call",
