--- a/packages/client/locales/en/ems-fd.json
+++ b/packages/client/locales/en/ems-fd.json
@@ -15,6 +15,8 @@
     "noActiveDeputies": "There are no active deputies",
     "citizenNoMedicalRecords": "This citizen doesn't have any medical records.",
     "activeDeputy": "Active Deputy",
+    "declareDead": "Declare dead",
+    "declareAlive": "Declare alive",
     "alert_deleteDeputy": "Are you sure you want to delete <span>{deputy}</span>? This action cannot be undone."
   }
 }
