--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -151,10 +151,11 @@
     "successCreateTicket": "Successfully created a ticket for {citizen}",
     "successCreateArrestReport": "Successfully created an arrest report for {citizen}",
     "successCreateWarning": "Successfully created a written warning for {citizen}",
+    "vehicleImpoundLocation": "The provided vehicle ({plate}) will be impounded at {impoundLocation}. You will be able to view this vehicle on the impound lot page.",
     "alert_endIncident": "Are you sure you want to end this incident. It can still be viewed by officers.",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone.",
-    "alert_allowCheckout": "Are you sure you to checkout this vehicle from the impound lot?",
+    "alert_allowCheckout": "Are you sure you want to checkout this vehicle from the impound lot?",
     "alert_deleteIncident": "Are you sure you want to delete this incident? This action cannot be undone.",
     "alert_revokeWarrant": "Are you sure you want to revoke this warrant? This action cannot be undone."
   },
