:hammer: chore: account page improvements

--- a/packages/client/locales/en/account.json
+++ b/packages/client/locales/en/account.json
@@ -19,10 +19,12 @@
     "scanQRCode": "Scan this QR code to add it to your authenticator app",
     "verifyCode": " Verify by entering a code from your authenticator app",
     "disable": "Disable",
-    "enable2FA": "Enable 2FA",
-    "disable2FA": "Disable 2FA",
+    "enable2FA": "Enable Two-Factor Authentication",
+    "disable2FA": "Disable Two-Factor Authentication",
     "next": "Next",
-    "verify": "Verify"
+    "verify": "Verify",
+    "enable2faSuccess": "Successfully enabled Two-Factor Authentication",
+    "disable2faSuccess": "Successfully disabled Two-Factor Authentication"
   },
   "Notifications": {
     "CITIZEN_DELETED": "<span>{citizen}</span> was deleted. Reason: {reason}"
