--- a/packages/client/locales/en/account.json
+++ b/packages/client/locales/en/account.json
@@ -24,7 +24,13 @@
     "next": "Next",
     "verify": "Verify",
     "enable2faSuccess": "Successfully enabled Two-Factor Authentication",
-    "disable2faSuccess": "Successfully disabled Two-Factor Authentication"
+    "disable2faSuccess": "Successfully disabled Two-Factor Authentication",
+    "darkTheme": "Dark Theme",
+    "statusView": "Status View",
+    "tableAlignment": "Table Actions Alignment",
+    "sounds": "Sounds",
+    "panicButton": "Panic Button",
+    "signal100": "Signal 100"
   },
   "Notifications": {
     "CITIZEN_DELETED": "<span>{citizen}</span> was deleted. Reason: {reason}"
