--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -151,6 +151,11 @@
     "successCreateTicket": "Successfully created a ticket for {citizen}",
     "successCreateArrestReport": "Successfully created an arrest report for {citizen}",
     "successCreateWarning": "Successfully created a written warning for {citizen}",
+    "goOnDuty": "Go On-duty",
+    "goOffDuty": "Go Off-duty",
+    "officers": "Officers",
+    "callsign1": "Callsign Symbol 1",
+    "callsign2": "Callsign Symbol 2",
     "vehicleImpoundLocation": "The provided vehicle ({plate}) will be impounded at {impoundLocation}. You will be able to view this vehicle on the impound lot page.",
     "alert_endIncident": "Are you sure you want to end this incident. It can still be viewed by officers.",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
