--- a/packages/client/locales/en/admin.json
+++ b/packages/client/locales/en/admin.json
@@ -42,6 +42,7 @@
     "detailedPermissions": "Detailed Permissions",
     "useOldPermissions": "Use old permissions",
     "useNewPermissions": "Use new permissions",
+    "setSelectedOffDuty": "Set selected units off-duty",
     "info_pendingBusinesses": "These are created businesses that are awaiting approval to be used. Accept or decline them.",
     "alert_deleteBusiness": "Are you sure you want to delete this <span>{name}</span>? All it's data will be lost. This action cannot be undone."
   }
