--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -156,6 +156,12 @@
     "officers": "Officers",
     "callsign1": "Callsign Symbol 1",
     "callsign2": "Callsign Symbol 2",
+    "DLExams": "Driver's license exams",
+    "noDLExams": "There are no driver's license exams yet.",
+    "editDLExam": "Edit Driver's license exam",
+    "theoryExam": "Theory Exam",
+    "practiceExam": "Practice Exam",
+    "createDLExam": "Create Driver's license exam",
     "vehicleImpoundLocation": "The provided vehicle ({plate}) will be impounded at {impoundLocation}. You will be able to view this vehicle on the impound lot page.",
     "alert_endIncident": "Are you sure you want to end this incident. It can still be viewed by officers.",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
