--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -162,6 +162,7 @@
     "theoryExam": "Theory Exam",
     "practiceExam": "Practice Exam",
     "createDLExam": "Create Driver's license exam",
+    "categories": "Categories",
     "vehicleImpoundLocation": "The provided vehicle ({plate}) will be impounded at {impoundLocation}. You will be able to view this vehicle on the impound lot page.",
     "alert_endIncident": "Are you sure you want to end this incident. It can still be viewed by officers.",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
