:tada: feat: able to delete exams

--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -163,6 +163,8 @@
     "practiceExam": "Practice Exam",
     "createDLExam": "Create Driver's license exam",
     "categories": "Categories",
+    "deleteDLExam": "Delete Driver's license exam",
+    "alert_deleteDLExam": "Are you sure you want to delete this driver's license exam? This action cannot be undone.",
     "vehicleImpoundLocation": "The provided vehicle ({plate}) will be impounded at {impoundLocation}. You will be able to view this vehicle on the impound lot page.",
     "alert_endIncident": "Are you sure you want to end this incident. It can still be viewed by officers.",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
