:hammer: chore: minor fixes

--- a/packages/client/locales/en/admin.json
+++ b/packages/client/locales/en/admin.json
@@ -9,6 +9,7 @@
     "MANAGE_EXPUNGEMENT_REQUESTS": "Manage Expungement Requests",
     "MANAGE_NAME_CHANGE_REQUESTS": "Manage Name Change Requests",
     "MANAGE_CAD_SETTINGS": "CAD Settings",
+    "MANAGE_DL_EXAM": "Manage DL Exam",
     "import": "Import",
     "IMPORT_CITIZENS": "Import Citizens",
     "IMPORT_VEHICLES": "Import Vehicles",
