--- a/packages/client/locales/en/admin.json
+++ b/packages/client/locales/en/admin.json
@@ -9,6 +9,7 @@
     "MANAGE_EXPUNGEMENT_REQUESTS": "Manage Expungement Requests",
     "MANAGE_NAME_CHANGE_REQUESTS": "Manage Name Change Requests",
     "MANAGE_CAD_SETTINGS": "CAD Settings",
+    "MANAGE_CUSTOM_FIELDS": "Manage Custom Fields",
     "import": "Import",
     "IMPORT_CITIZENS": "Import Citizens",
     "IMPORT_VEHICLES": "Import Vehicles",
@@ -43,6 +44,8 @@
     "useOldPermissions": "Use old permissions",
     "useNewPermissions": "Use new permissions",
     "setSelectedOffDuty": "Set selected units off-duty",
+    "createCustomField": "Create custom field",
+    "noCustomFields": "There are no custom fields yet",
     "info_pendingBusinesses": "These are created businesses that are awaiting approval to be used. Accept or decline them.",
     "alert_deleteBusiness": "Are you sure you want to delete this <span>{name}</span>? All it's data will be lost. This action cannot be undone."
   }
