--- a/packages/client/locales/en/admin.json
+++ b/packages/client/locales/en/admin.json
@@ -45,6 +45,7 @@
     "useNewPermissions": "Use new permissions",
     "setSelectedOffDuty": "Set selected units off-duty",
     "createCustomField": "Create custom field",
+    "editCustomField": "Edit custom field",
     "noCustomFields": "There are no custom fields yet",
     "deleteCustomField": "Delete Custom Field",
     "alert_deleteCustomField": "Are you sure you want to delete this custom field? This action cannot be undone. All values created with this field will also be deleted.",
