--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -78,7 +78,8 @@
     "callHistory": "Call History",
     "citizenLogs": "Citizen Logs",
     "courthouse": "Courthouse",
-    "dlExams": "Driver License Exams"
+    "dlExams": "Driver License Exams",
+    "dmv": "Department of Motor Vehicles"
   },
   "Errors": {
     "unknown": "An unexpected error occurred",
