--- a/packages/client/locales/en_gb/admin.json
+++ b/packages/client/locales/en_gb/admin.json
@@ -9,6 +9,7 @@
     "MANAGE_EXPUNGEMENT_REQUESTS": "Manage Sealing Requests",
     "MANAGE_NAME_CHANGE_REQUESTS": "Manage Deed Poll Requests",
     "MANAGE_CAD_SETTINGS": "CAD Settings",
+    "MANAGE_CUSTOM_FIELDS": "Manage Custom Fields",
     "import": "Import",
     "IMPORT_CITIZENS": "Import Civilians",
     "IMPORT_VEHICLES": "Import Vehicles",
@@ -38,6 +39,16 @@
     "allUnits": "All Units",
     "departmentWhitelisting": "Force Whitelisting ({length})",
     "importViaFile": "Import via file",
+    "managePermissions": "Manage Permissions",
+    "detailedPermissions": "Detailed Permissions",
+    "useOldPermissions": "Use old permissions",
+    "useNewPermissions": "Use new permissions",
+    "setSelectedOffDuty": "Set selected units off-duty",
+    "createCustomField": "Create custom field",
+    "editCustomField": "Edit custom field",
+    "noCustomFields": "There are no custom fields yet",
+    "deleteCustomField": "Delete Custom Field",
+    "alert_deleteCustomField": "Are you sure you want to delete this custom field? This action cannot be undone. All values created with this field will also be deleted.",
     "info_pendingBusinesses": "These are created businesses that are awaiting approval to be used. Accept or decline them.",
     "alert_deleteBusiness": "Are you sure you want to delete this <span>{name}</span>? All it's data will be lost. This action cannot be undone."
   }
