--- a/packages/client/locales/en_gb/auth.json
+++ b/packages/client/locales/en_gb/auth.json
@@ -16,6 +16,7 @@
     "twoFactorCode": "Two Factor Code",
     "savePasswordInfo": "Make sure to securely save your new password so this doesn't happen again!",
     "loginViaDiscord": "Login via Discord",
-    "continueAs": "Continue as {username}"
+    "continueAs": "Continue as {username}",
+    "sixDigitCode": "Please enter the 6-digit code from your authenticator app"
   }
 }
