--- a/packages/client/locales/en_gb/citizen.json
+++ b/packages/client/locales/en_gb/citizen.json
@@ -63,6 +63,9 @@
     "untaxed": "Untaxed",
     "passed": "Passed",
     "failed": "Failed",
+    "vehicleImpounded": "This vehicle is impounded",
+    "successVehicleRegistered": "Successfully registered a vehicle with registration: {plate}",
+    "dmvStatus": "DVLA Status",
     "alert_deleteVehicle": "Are you sure you want to delete this vehicle? This action cannot be undone."
   },
   "Weapons": {
@@ -74,6 +77,7 @@
     "noWeapons": "You do not have any weapons registered yet.",
     "deleteWeapon": "Delete Weapon",
     "registeredWeapons": "Registered Weapons",
+    "successWeaponRegistered": "Successfully registered a weapon",
     "alert_deleteWeapon": "Are you sure you want to delete this weapon? This action cannot be undone."
   },
   "MedicalRecords": {
