--- a/packages/client/locales/en_gb/leo.json
+++ b/packages/client/locales/en_gb/leo.json
@@ -58,8 +58,8 @@
     "arrestReports": "Arrest Reports",
     "nameNotFound": "Could not find a civilian with that name",
     "createWarrant": "Create Warrant",
-    "citizenDead": "WARNING: This civilian dead on {date}",
-    "hasWarrants": "WARNING: This civilian has active warrants!",
+    "citizenDead": "WARNING: This citizen was marked as deceased on {date}.",
+    "hasWarrants": "WARNING: This citizen has active warrants!",
     "rank": "Rank",
     "officerLogs": "Officer Logs",
     "disableSignal100": "Disable Control",
@@ -143,13 +143,38 @@
     "manageRadioChannel": "Manage Channel",
     "noIncidentEvents": "This incident does not have any events.",
     "viewCall": "View Call",
-    "situationCode": "Response Code",
+    "situationCode": "Response Grade",
     "mergeOfficers": "Merge officers",
     "manageVehicleFlags": "Manage vehicle flags",
+    "manageCitizenFlags": "Manage civilian flags",
+    "successCreateWarrant": "Successfully created a warrant for {citizen}",
+    "successCreateTicket": "Successfully created a FPN for {citizen}",
+    "successCreateArrestReport": "Successfully created an arrest report for {citizen}",
+    "successCreateWarning": "Successfully created a caution for {citizen}",
+    "goOnDuty": "Go On-duty",
+    "goOffDuty": "Go Off-duty",
+    "officers": "Officers",
+    "callsign1": "Callsign Symbol 1",
+    "callsign2": "Callsign Symbol 2",
+    "DLExams": "Driver's license exams",
+    "noDLExams": "There are no theory exams yet.",
+    "editDLExam": "Edit Exam",
+    "theoryExam": "Theory Exam",
+    "practiceExam": "Practical Exam",
+    "createDLExam": "Create Driver's license exam",
+    "categories": "Categories",
+    "deleteDLExam": "Delete Driver's license exam",
+    "license": "License",
+    "otherFields": "Other Fields",
+    "manageCustomFields": "Manage other fields",
+    "dmv": "Driver and Vehicle Licensing Agency",
+    "noVehiclesPendingApprovalInDmv": "There are no vehicles pending approval by the DVLA.",
+    "alert_deleteDLExam": "Are you sure you want to delete this theory exam? This action cannot be undone.",
+    "vehicleImpoundLocation": "The provided vehicle ({plate}) will be impounded at {impoundLocation}. You will be able to view this vehicle on the impound lot page.",
     "alert_endIncident": "Are you sure you want to end this incident. It can still be viewed by officers.",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone.",
-    "alert_allowCheckout": "Are you sure you to checkout this vehicle from the impound lot?",
+    "alert_allowCheckout": "Are you sure you want to checkout this vehicle from the impound lot?",
     "alert_deleteIncident": "Are you sure you want to delete this incident? This action cannot be undone.",
     "alert_revokeWarrant": "Are you sure you want to revoke this warrant? This action cannot be undone."
   },
