--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -47,7 +47,8 @@
     "filters": "Filters",
     "openInSearch": "Open in search",
     "goBack": "Go back",
-    "success": "Success"
+    "success": "Success",
+    "currency": "$"
   },
   "Nav": {
     "citizen": "Citizen",
