--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -168,6 +168,7 @@
     "otherFields": "Other Fields",
     "manageCustomFields": "Manage other fields",
     "dmv": "Department of Motor Vehicles",
+    "unitsInvolved": "Units Involved",
     "noVehiclesPendingApprovalInDmv": "There are no vehicles pending approval in the dmv.",
     "alert_deleteDLExam": "Are you sure you want to delete this driver's license exam? This action cannot be undone.",
     "vehicleImpoundLocation": "The provided vehicle ({plate}) will be impounded at {impoundLocation}. You will be able to view this vehicle on the impound lot page.",
