--- a/packages/client/locales/en/citizen.json
+++ b/packages/client/locales/en/citizen.json
@@ -56,6 +56,7 @@
     "noVehicles": "You do not have any vehicles registered yet.",
     "deleteVehicle": "Delete Vehicle",
     "reportAsStolen": "Report as stolen",
+    "reApplyForDmv": "Re-apply for DMV",
     "registeredVehicles": "Registered Vehicles",
     "flags": "Flags",
     "inspectionStatus": "Inspection Status",
