--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -173,6 +173,8 @@
     "noCustomFieldResults": "No results found for this search query.",
     "customField": "Custom Field",
     "query": "Query",
+    "penalCodes": "Penal Codes",
+    "noPenalCodes": "There have been no penal codes created yet.",
     "noVehiclesPendingApprovalInDmv": "There are no vehicles pending approval in the dmv.",
     "alert_deleteDLExam": "Are you sure you want to delete this driver's license exam? This action cannot be undone.",
     "vehicleImpoundLocation": "The provided vehicle ({plate}) will be impounded at {impoundLocation}. You will be able to view this vehicle on the impound lot page.",
