--- a/packages/client/locales/en/values.json
+++ b/packages/client/locales/en/values.json
@@ -20,6 +20,7 @@
     "isDefaultDepartment": "Default Department",
     "deleteSelectedValues": "Delete Selected Values",
     "isDefault": "Is Default",
+    "defaultOfficerRank": "Default Officer Rank",
     "alert_deletePenalCodeGroup": "Are you sure you want to delete <span>{group}</span>? This action cannot be undone.",
     "alert_deleteValue": "Are you sure you want to delete <span>{value}</span>? This action cannot be undone!",
     "alert_deleteSelectedValues": "Are you sure you want to delete {length} items? This action cannot be undone"
